--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Dragon-X Official Website</title>
 	<meta name="description" content="Dragon-X Official Website">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="shortcut icon" type="image/x-icon" href="https://telegra.ph/file/9bd07685a45a02ee7747c.jpg">
+	<link rel="shortcut icon" type="image/x-icon" href="https://telegra.ph/file/35883180004518cb15fe9.jpg">
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" href="./website-files/bootstrap.min.css" type="text/css" media="all">
@@ -73,7 +73,7 @@
 		<!-- logo image -->
 		<div class="site-logo">
 			<a href="#">
-				<img src="./website-files/logo.png" alt="Bolby">
+				<img src="./website-files/photo_2022-02-11_08-03-49.jpg" alt="Bolby">
 			</a>
 		</div>
 	</div>
@@ -85,7 +85,7 @@
 	<!-- logo image -->
 	<div class="site-logo">
 		<a href="#">
-			<img src="./website-files/logo.png" alt="Bolby">
+			<img src="./website-files/photo_2022-02-11_08-03-49.jpg" alt="Bolby">
 		</a>
 	</div>
 	
