--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<!-- intro -->
 			<div class="intro">
 				<!-- avatar image -->
-				<img src="./website-files/icon.png" alt="Bolby" class="mb-4">
+				<img src="./website-files/photo_2022-02-11_08-03-49.jpg" alt="Bolby" class="mb-4">
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Dragon-X</h1>
@@ -211,50 +211,8 @@
 								</div>
 								<div class="spacer d-md-none d-lg-none" data-height="30" style="height: 30px;"></div>
 							</div>
-							<div class="col-md-6">
-								<!-- skill item -->
-								<div class="skill-item">
-									<div class="skill-info clearfix">
-										<h4 class="float-left mb-3 mt-0">Python</h4>
-										<span class="float-right">80%</span>
-									</div>
-									<div class="progress">
-										<div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="80" data-color="#FFD15C" style="background-color: rgb(255, 209, 92); width: 85%;">
-										</div>
-									</div>
-									<div class="spacer" data-height="20" style="height: 20px;"></div>
-								</div>
-
-								<!-- skill item -->
-								<div class="skill-item">
-									<div class="skill-info clearfix">
-										<h4 class="float-left mb-3 mt-0">Shell</h4>
-										<span class="float-right">15%</span>
-									</div>
-									<div class="progress">
-										<div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="15" data-color="#FF4C60" style="background-color: rgb(255, 76, 96); width: 95%;">
-										</div>
-									</div>
-									<div class="spacer" data-height="20" style="height: 20px;"></div>
-								</div>
-
-								<!-- skill item -->
-								<div class="skill-item">
-									<div class="skill-info clearfix">
-										<h4 class="float-left mb-3 mt-0">Other</h4>
-										<span class="float-right">05%</span>
-									</div>
-									<div class="progress">
-										<div class="progress-bar data-background" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="5" data-color="#6C6CE5" style="background-color: rgb(108, 108, 229); width: 70%;">
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
+						   <div class="col-md-6">					
+			            </div>
 			<!-- row end -->
 
 			<div class="spacer" data-height="70" style="height: 70px;"></div>
@@ -514,7 +472,7 @@
 	
 	//By Geek Site.in
 	
-	var message="WhatsApp Bot coming soon...";;
+	var message="Dont Click Dragonx Website...";;
 
 	
 	///////////////////////////////////
